# AIAA_RTA

./: CMakeLists.txt  README.md  gitignore  package.xml
launch/: multi_vtol_launch.py  rta_scenarioA.launch.py  vehicle_mission.launch.py
scripts/: PX4Vehicle.py  RTA_DAA.py  Roll_RTA.py  helper_functions.py  inject_actuator_failure.py
